// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`visitRequestBody detects an unspecified request body 1`] = `
Array [
  Object {
    "contentType": "application/json",
    "kind": "UnmatchedRequestBody",
  },
]
`;

exports[`visitRequestBody detects missing required request bodies 1`] = `
Array [
  Object {
    "kind": "MissingRequestBody",
  },
]
`;

exports[`visitRequestBody detects request bodies with an undocumented content type 1`] = `
Array [
  Object {
    "contentType": "text/csv",
    "kind": "UnmatchedRequestBody",
  },
]
`;

exports[`visitRequestBody detects request bodies with an undocumented content type 2`] = `
Array [
  Object {
    "contentType": null,
    "kind": "UnmatchedRequestBody",
  },
]
`;
